@@ -2,4 +2,6 @@
 
   <include package=".exportimport" />
 
+  <include file="profiles.zcml"/>
+
 </configure>
