@@ -1,0 +1,14 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="cmfdifftool">
+
+  <genericsetup:registerProfile
+      name="CMFDiffTool"
+      title="CMFDiffTool"
+      directory="profiles/default"
+      description="Extension profile for default CMFDiffTool setup."
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
+</configure>
