@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_skins" meta_type="Plone Skins Tool" allow_any="False"
+   cookie_persistence="False" default_skin="Plone Default"
+   request_varname="plone_skin">
+ <object name="ChangeSet" meta_type="Filesystem Directory View"
+    directory="CMFDiffTool/skins/ChangeSet"/>
+  <skin-path name="*">
+  <layer name="ChangeSet" insert-after="custom"/>
+ </skin-path>
+</object>
