@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="CMF Types Tool">
+ <object name="ChangeSet" meta_type="Factory-based Type Information"/>
+</object>
